force-app/main/default/objects/sked__Change_Event__e/sked__Change_Event__e.object-meta.xml
<CustomObject>
    <label>Change Event</label>
    <pluralLabel>Change Events</pluralLabel>
</CustomObject>