force-app/main/default/objects/sked__Change_Event__e/fields/sked__Changed_Data__c.field-meta.xml
<CustomField>
    <fullName>sked__Changed_Data__c</fullName>
    <label>Changed Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>