force-app/main/default/objects/sked__Change_Event__e/fields/sked__Operation__c.field-meta.xml
<CustomField>
    <fullName>sked__Operation__c</fullName>
    <label>Operation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>