force-app/main/default/objects/sked__Change_Event__e/fields/sked__Table__c.field-meta.xml
<CustomField>
    <fullName>sked__Table__c</fullName>
    <label>Table</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>